<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">AirDomeWatchDog</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear">Clear log</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
         <string name="repeating_scheduled">Repeating alarm will go off in 15 seconds and
        every 15 seconds after based on the elapsed realtime clock</string>
    -->
    <string name="repeating_scheduled">首次启动时间： <xliff:g id="startat">%1$s</xliff:g> \n
        每隔 <xliff:g id="getinterval">%2$s</xliff:g> 分钟，获取数据\n
        每隔 <xliff:g id="putinterval">%3$s</xliff:g> 分钟，上传数据</string>
    <string name="alarm_service_started">The alarm service has started running</string>
    <string name="ftp_service_finished">Ftp读取服务完成</string>
    <string name="upload_service_finished">Ftp读取服务完成</string>
    <string name="alarm_service_label">Sample Alarm Service</string>
    <string name="alarm_service_notification_id">We use a layout id because it is a unique number</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="alarm_notification_title">Air dome watch-dog</string>
    <string name="empty">最大日志条数:5000，自动清空.</string>
    
    <string name="title_activity_min_max">MinMaxActivity</string>
    <string name="sensor_name">传感器名称</string>
    <string name="min_value">最小值</string>
    <string name="max_value">最大值</string>
    <string name="btn_add_text">增加</string>
    <string name="btn_del_text">删除</string>

</resources>